# oridp

./: Kuavo_DP_eval.py  LeRobot_KuavoEnv.py  README.md  check.ipynb  check_img.py  conda_environment.yaml  eval_real_robot_kuavo.py  eval_real_robot_kuavo_concise.py  eval_real_robot_kuavo_opt.py  hands_state_pub_hx.py  joint_avg.json  pyproject.toml  read_pub_traj.py  rec.md  robodiff.yml  train.py
diffusion_policy/config/: Task11_Toy.yaml  train_diffusion_unet_real_image_workspace.yaml  train_diffusion_unet_real_image_workspace_KuavoGrabB_task.yaml  train_diffusion_unet_real_image_workspace_KuavoGrabCup_task.yaml  train_diffusion_unet_real_image_workspace_KuavoTask11_Toy.yaml  train_diffusion_unet_real_image_workspace_KuavoTask7SuZhou_task.yaml  train_diffusion_unet_real_image_workspace_KuavoTask8SuZhou_task.yaml  train_diffusion_unet_real_image_workspace_KuavoTask8_1SuZhou_task.yaml  train_diffusion_unet_real_image_workspace_KuavoTower_task.yaml  train_diffusion_unet_real_image_workspace_KuavoToy_task.yaml  train_diffusion_unet_real_image_workspace_SongLingPickPlace_task.yaml  train_diffusion_unet_real_image_workspace_first_task.yaml
diffusion_policy/dataset/: pusht_image_dataset_1.py  pusht_image_dataset_KuavoGrabCup_task.py  pusht_image_dataset_KuavoTask11_Toy_task.py  pusht_image_dataset_KuavoTask8SuZhou_task.py  pusht_image_dataset_KuavoTask9-SuZhou_task.py  pusht_image_dataset_KuavoTower_task.py  pusht_image_dataset_SongLingPickPlace_task.py  pusht_image_dataset_first_task.py  pusht_image_dataset_touch.py
diffusion_policy/real_world/: t.py  (+12 more)
tmp/: check_img.py
(+58 files in other folders)
